--- a/hanzi-grouper/app/src/main/res/values/strings.xml
+++ b/hanzi-grouper/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">hanzi-grouper</string>
+    <string name="app_name">Hanzi Grouper</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_group">GroupActivity</string>
+    <string name="title_activity_character">CharacterActivity</string>
 </resources>
